# HydraLab

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HYDRA.md  Hydra - User Requirements.md  LICENSE  NOTICE  README.md  SECURITY.md  alembic.ini  package.json  pyproject.toml
.agents/: 00-ATOMIC-STRUCTURE.md  ALL-BRANCHES-QUICK-REFERENCE.md  DATABASE-EDR-RLS.md  PROCESS-FLOW.md  checklist.md  learned-rules.md
.agents/features/2026-05-28-UR01/: 01-documentation-bootstrap.md  02-local-sqlite-foundation.md  03-web-shell-research-workspace.md  04-chat-status-orchestration.md  05-paper-ingestion-rag.md  06-citation-evidence-manager.md  07-writing-review-tools.md  08-notes-knowledge-search.md  09-kanban-progress-tracking.md  10-local-settings-export.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-macos.yml  release.yml
apps/chrome-extension/: README.md  manifest.json  package.json  tsconfig.json
apps/chrome-extension/src/: chrome.ts  content-script.ts  service-worker.ts  types.ts
apps/desktop/: package.json  tauri.conf.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: mobile-tablet.spec.ts  workbench.spec.ts
apps/web/src/: main.tsx  styles.css
backend/: alembic.ini
backend/hydra/: __init__.py  app.py  browser_bridge.py  research.py  schemas.py  serve.py  storage.py  writing.py
backend/hydra/agents/: __init__.py  approvals.py  capabilities.py  contracts.py  policy.py  runs.py
backend/hydra/audit/: __init__.py  ledger_export.py
backend/hydra/autonomy/: __init__.py  audit.py  checkpoints.py  gate.py  loop.py  policy.py  risk.py
backend/hydra/browser_automation/: __init__.py  capture.py  driver.py  policy.py  runner.py
backend/hydra/code_fixer/: __init__.py  service.py
backend/hydra/collaboration/: __init__.py  audit.py  documents.py  exclusion.py  identity.py  session.py  transport.py
backend/hydra/compute/: __init__.py  models.py  registry.py  sandbox.py
backend/hydra/database/: crud.py  models.py  repository.py  session.py
backend/hydra/experiments/: __init__.py  approval.py  logs.py  models.py  runner.py  search_adapter.py
backend/hydra/manuscripts/: __init__.py  builder.py  exporters.py  licensing.py  models.py  package.py  redaction.py  templates.py  validation.py
backend/hydra/orchestrator/: __init__.py  advanced.py  dispatch.py  ranking.py  run.py  stages.py
backend/hydra/providers/: __init__.py  base.py  mock.py  openai_adapter.py  (+2 more)
backend/migrations/: env.py
backend/tests/: test_agents.py  test_annotations.py  test_api.py  test_app_data.py  test_autonomy_safety.py  test_browser_automation.py  test_browser_bridge.py  test_browser_copilot.py  test_chat.py  test_citations.py  test_code_fixer.py  test_collaboration.py  test_compute.py  test_consent_privacy.py  test_console.py  test_csrf.py  test_database.py  test_docx.py  test_docx_openxml.py  test_evidence.py  test_exports.py  test_git.py  test_idea_recipe.py  test_ingestion.py  test_ingestion_queue.py  test_literature_recipe.py  test_manuscripts.py  test_mcp.py  test_notes.py  test_orchestrator.py  test_orchestrator_advanced.py  test_phase1_hardening.py  test_project_context.py  test_project_isolation.py  test_project_workspace.py  test_prompt_injection.py  test_provider_routing.py  test_rag.py  test_ranking.py  test_release_pipeline.py  (+9 more)
docs/: release.md
scripts/: __init__.py  build_release.py  license_allowlist.json  license_gate.py  package-macos.py  package_macos.py  release.py
(+244 files in other folders)
