[project]
name = "hydra-research-assistant"
version = "0.1.0"
description = "Hydra Phase 1 local research companion"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "bibtexparser==1.4.4",
  "citeproc-py>=0.9.3",
  "fastapi>=0.115.0,<1",
  "greenlet>=3.5.1",
  "httpx>=0.27.0,<1",
  "keyring>=25.7.0",
  "pydantic>=2.8.0,<3",
  "pypdf>=5.0.0,<7",
  "pytest-asyncio>=1.4.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9,<1",
  "rispy>=0.10.0",
  "ruamel-yaml>=0.19.1",
  "sqlmodel>=0.0.38",
  "tomli-w>=1.2.0",
  "uvicorn[standard]>=0.30.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
