[project]
name = "hydralab"
version = "0.1.0"
description = "HydraLab — an offline-first local research workbench"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "the HydraLab authors" }]
keywords = ["research", "papers", "citations", "annotations", "offline-first", "workbench"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "bibtexparser==1.4.4",
  "citeproc-py>=0.9.3",
  "fastapi>=0.115.0,<1",
  "greenlet>=3.5.1",
  "httpx>=0.27.0,<1",
  "keyring>=25.7.0",
  "pydantic>=2.8.0,<3",
  "pypdf>=6.13.3,<7",
  "pytest-asyncio>=1.4.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.30,<1",
  "rispy>=0.10.0",
  "ruamel-yaml>=0.19.1",
  "sqlmodel>=0.0.38",
  "tomli-w>=1.2.0",
  "uvicorn[standard]>=0.30.0,<1",
]

[project.optional-dependencies]
# Browser-automation copilot (Playwright + a Chromium download via
# `playwright install chromium`). Optional: the driver lazy-imports it, so the
# core app runs without it. Install with `pip install "hydralab[browser]"`.
browser = [
  "playwright>=1.56.0,<2",
]
dev = [
  "pytest>=9.0.3,<10",
  "playwright>=1.56.0,<2",
]

[project.scripts]
hydralab = "hydra.serve:main"

[project.urls]
Homepage = "https://github.com/M1Vj/HydraLab"
Repository = "https://github.com/M1Vj/HydraLab"
Issues = "https://github.com/M1Vj/HydraLab/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Include the bundled web UI (scripts/build_release.py drops it here) in both
# the sdist and the wheel, even though backend/hydra/web is git-ignored build
# output. Global so the wheel-built-from-sdist path keeps the assets.
[tool.hatch.build]
artifacts = ["backend/hydra/web/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["backend/hydra"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
